--- a/ProfilePictureGenerator/index.html
+++ b/ProfilePictureGenerator/index.html
@@ -5,7 +5,7 @@
         <title>SITCON 頭貼產生器！</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/bootstrap.css">
-
+        <link rel="icon" href="img/favicon.png" type="image/png">
     </head>
     <body>
         <div class="container" id="container">
