Container Height Fixed

--- a/ProfilePictureGenerator/index.html
+++ b/ProfilePictureGenerator/index.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="icon" href="img/favicon.png" type="image/png">
+
+        <!--jQuery-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+        <script type="text/javascript" src="js/container.js"></script>
     </head>
     <body>
         <div class="container" id="container">
