--- a/ProfilePictureGenerator/index.html
+++ b/ProfilePictureGenerator/index.html
@@ -6,16 +6,12 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="icon" href="img/favicon.png" type="image/png">
-
-        <!--jQuery-->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-        <script type="text/javascript" src="js/container.js"></script>
     </head>
     <body>
-        <div class="container" id="container">
+        <div class="container">
+            <div class="container row" id="trans-bg"></div>
             <div id="header" class="container row">
-                <img src="./img/logo.png" alt="2016 SITCON Logo" title="Logo" class="img-responsive center-block" width="100%" id="logo" height="200px">
+                <img src="./img/logo.png" alt="..." title="Logo" class="img-responsive center-block" width="100%" id="logo" height="200px">
                 <h1 class="text-center" id="title">頭貼產生器</h1>
             </div>
             <div id="content" class="container row">
