--- a/2018mis/index.html
+++ b/2018mis/index.html
@@ -62,7 +62,7 @@
                     	<div class="tab-pane mt-3 fade show active" id="bezier">
                         	<div class="row">
                                 <div class="col-8">
-                                    <p class="text-muted"><button type="button" class="btn btn-info" id="reset_bezier">Clear</button> <i class="fa fa-refresh fa-spin fa-fw"></i> Double click to add a new point and single click to drag.</p>
+                                    <p class="text-muted"><button type="button" class="btn btn-info" id="reset_bezier">Clear</button> <i class="fa fa-refresh fa-spin fa-fw"></i> Double click to add a new point and hold points to drag.</p>
                                 </div>
                                 <div class="col-4" style="margin: auto;">
                                     <p class="float-right">Position: (<span id="bezier_x">0</span>, <span id="bezier_y">0</span>)</p>
