--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href= "style.css"/ >
+		<link type="text/css" rel="stylesheet" href= "style.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<!--Fonts-->
@@ -8,7 +8,7 @@
 
 		<script type="text/javascript" src="animation.js"></script>
 
-		<link rel="shortcut icon" href="profile.ico">
+		<link rel="shortcut icon" href="https://graph.facebook.com/1257111200971580/picture?width=1000&height=1000">
 
 		<title> An-Ting Hsu </title>
 	</head>
@@ -21,7 +21,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2" id="container">
 					</br>
-					<a href="https://www.facebook.com/Andy.Hsu.An.Ting"><img id="profile" src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xpt1/v/t1.0-9/11143657_1170300902985944_437178585297303333_n.jpg?oh=9f4e067d53bf30e4d52f489faa67a02f&oe=56D0C1CA&__gda__=1454199246_28cec5c2d777b1ea8bd46112a9b5165f" /></a>
+					<a href="https://www.facebook.com/Andy.Hsu.An.Ting"><img id="profile" src="https://graph.facebook.com/1257111200971580/picture?width=1000&height=1000" /></a>
 					</br>
 					</br>
 					<a href="https://www.facebook.com/Andy.Hsu.An.Ting"><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> &nbsp An-Ting Hsu </a></br>
@@ -30,7 +30,7 @@
 
 					<div id="intro">
 						<p class="pdefault"> Gender: Male </p>
-						<p class="pdefault"> Age: 19 </p>
+						<p class="pdefault"> Age: <span id="age"></span> </p>
 						<p class="pdefault"> Blood Type: O </p>
 						<p class="pdefault"> Birth Date: March 5, 1996 </p>
 						<p class="pdefault"> Languages: Mandarin, English, Deutsch </p>
@@ -47,13 +47,13 @@
  							<tbody>
  								<tr>
  									<td> 1 </td>
- 									<td> RenAi Elementary School </td>
+ 									<td> Taipei Renai Elementary School </td>
  									<td> 2002 </td>
  									<td> 2008 </td>
  								</tr>
  								<tr>
  									<td> 2 </td>
- 									<td> RenAi Junior High School </td>
+ 									<td> Taipei Renai Junior High School </td>
  									<td> 2008 </td>
  									<td> 2011 </td>
  								</tr>
@@ -67,11 +67,17 @@
  									<td> 4 </td>
  									<td> National TsingHua University </td>
  									<td> 2014 </td>
- 									<td> - </td>
- 								</tr>
+ 									<td> 2018 </td>
+								 </tr>
+								 <tr>
+									<td> 5 </td>
+									<td> National Taiwan University of Science and Technology </td>
+									<td> 2018 </td>
+									<td> - </td>
+								</tr>
  							</tbody>
  						</table>
-						<p class="pdefault"> Major: Electrical Engineering </p>
+						<p class="pdefault"> Major: Electrical Engineering, Information Management </p>
 						</br>
 						</br>
 						</br>
@@ -82,6 +88,17 @@
 		</div>
 
 		<div id="gotop">^</div>
-		
+
+	
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+		<script>
+			var date = new Date();
+
+			$(document).ready(function(){
+				$('#age').text(date.getFullYear() - 1996);
+			});
+
+		</script>
 	</body>
 </html>
