--- a/lifeonchain/market.html
+++ b/lifeonchain/market.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Poseidon Network Edge Demo</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="https://poseidon.network/static/favicon-32x32.png">
+    <title>2019 鏈上生活節 Life on Chain!</title>
 
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
 
