feat: lifeonchain SEO

--- a/lifeonchain/ticket.html
+++ b/lifeonchain/ticket.html
@@ -5,10 +5,32 @@
     <link rel="shortcut icon" href="img/favicon.ico"/>
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
 
+    <link rel="canonical" href="http://lifeonchain.today/ticket.html"/>
+    <meta property="og:site_name" content="Life on Chain"/>
+    <meta property="og:url" content="http://lifeonchain.today/ticket.html"/>
+    <meta property="og:image" content="http://lifeonchain.today/img/main-figure.jpg"/>
+    <meta property="og:title" content="2019 鏈上生活節 Life on Chain! - 購票資訊"/>
+    <meta property="og:description" content="從今天起！鏈上生活節！"/>
+
+    <meta name="title" content="2019 鏈上生活節 Life on Chain! - 購票資訊"/>
+    <meta name="description" content="從今天起！鏈上生活節！"/>
+    <meta name="keywords" content="2019,生活節,鏈上生活節,區塊鏈,聖人大盜,生活講堂,社群市集,alysida,zombit,lifeonchain,Life on Chain,blockchain"/>
+    <meta name="robots" content="index, follow">
+
     <!-- Bootstrap 4 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149288792-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-149288792-1');
+    </script>
 
 </head>
 
@@ -33,7 +55,7 @@
                     <a class="nav-link" href="lecture.html">生活講堂</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="market.html">鏈上市集</a>
+                    <a class="nav-link" href="market.html">社群市集</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="location.html">活動地點</a>
