feat: update lifeonchain domain

--- a/lifeonchain/market.html
+++ b/lifeonchain/market.html
@@ -5,10 +5,10 @@
     <link rel="shortcut icon" href="img/favicon.ico"/>
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
 
-    <link rel="canonical" href="http://lifeonchain.today/market.html"/>
+    <link rel="canonical" href="http://loc2019.lifeonchain.today/market.html"/>
     <meta property="og:site_name" content="Life on Chain"/>
-    <meta property="og:url" content="http://lifeonchain.today/market.html"/>
-    <meta property="og:image" content="http://lifeonchain.today/img/main-figure.jpg"/>
+    <meta property="og:url" content="http://loc2019.lifeonchain.today/market.html"/>
+    <meta property="og:image" content="http://loc2019.lifeonchain.today/img/main-figure.jpg"/>
     <meta property="og:title" content="2019 鏈上生活節 Life on Chain! - 社群市集"/>
     <meta property="og:description" content="從今天起！鏈上生活節！"/>
 
