--- a/lifeonchain/market.html
+++ b/lifeonchain/market.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>2019 鏈上生活節 Life on Chain!</title>
     <link rel="shortcut icon" href="img/favicon.ico"/>
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
