--- a/lifeonchain/about/index.html
+++ b/lifeonchain/about/index.html
@@ -9,7 +9,7 @@
     <link rel="canonical" href="http://loc2019.lifeonchain.today/about/"/>
     <meta property="og:site_name" content="Life on Chain"/>
     <meta property="og:url" content="http://loc2019.lifeonchain.today/about/"/>
-    <meta property="og:image" content="http://loc2019.lifeonchain.today/img/main-figure.png"/>
+    <meta property="og:image" content="http://loc2019.lifeonchain.today/img/main-figure.jpg"/>
     <meta property="og:title" content="2019 鏈上生活節 Life on Chain! - 關於鏈上生活"/>
     <meta property="og:description" content="從今天起！鏈上生活節！"/>
 
@@ -57,10 +57,18 @@
     </nav>
 
     <div class="section-wrapper">
-        <section class="shape shape-right-left shape-yellow" style="height: 350px;">
+        <section class="shape shape-right-left shape-yellow" style="height: 500px;">
             <div class="section-container">
-                <div class="row">
-                    
+                <div class="row mt-4">
+                    <div class="col-md-4 col-lg-6">
+                        <img src="/img/about-lifeonchain.png" class="intro-img img-fluid mb-4" style="max-width: 450px;" />
+                    </div>
+                    <div class="col-md-8 col-lg-6">
+                        <p>區塊鏈是什麼？</p>
+                        <p>生活、會因此而改變嗎？</p>
+                        <p>有別於以往強調技術與商業性質的區塊鏈活動，鏈上生活節2019將以生活的角度出發，強調與｢人｣的連結，與大家一起在未知的路途上探索，找尋區塊鏈更多的可能性。</p>
+                        <p>看！學！吃！玩！就在鏈上生活節2019；四大主題：｢大盜影城｣、｢鏈上講堂｣、｢生活市集｣、「百萬大富翁」帶給你一整天、全方位的的知識生活饗宴，體驗鏈上新世界，從今天起、Life On Chain！</p>
+                    </div>
                 </div>
             </div>
         </section>
