--- a/lifeonchain/index.html
+++ b/lifeonchain/index.html
@@ -9,7 +9,7 @@
     <link rel="canonical" href="http://loc2019.lifeonchain.today/"/>
     <meta property="og:site_name" content="Life on Chain"/>
     <meta property="og:url" content="http://loc2019.lifeonchain.today/"/>
-    <meta property="og:image" content="http://loc2019.lifeonchain.today/img/main-figure.png"/>
+    <meta property="og:image" content="http://loc2019.lifeonchain.today/img/main-figure.jpg"/>
     <meta property="og:title" content="2019 鏈上生活節 Life on Chain!"/>
     <meta property="og:description" content="從今天起！鏈上生活節！"/>
 
@@ -32,6 +32,15 @@
 
         gtag('config', 'UA-149288792-1');
     </script>
+
+    <style>
+        .col-md-4.col-lg-6 {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
 
 </head>
 
@@ -59,57 +68,59 @@
     <div class="section-wrapper">
         <section class="main-figure" style="z-index: 0;"></section>
     
-        <section class="shape shape-right-left shape-yellow" style="height: 550px;">
+        <section class="shape shape-right-left shape-yellow shape-intro" style="height: 550px;">
             <div class="section-container">
                 <div class="row">
-                    <div class="col-md-8">
-                        <div class="trapezoid-img trapezoid-img-left" style="background-image: url('/img/movie-page.jpg')"></div>
+                    <div class="col-md-8 col-lg-6">
+                        <div class="trapezoid-img trapezoid-img-left" style="background-image: url('/img/movie-page.jpg');"></div>
                     </div>
-                    <div class="col-md-4">
-                        <img src="/img/movie-logo.png" class="intro-img img-fluid mb-4" />
-                        <p>全世界首部區塊鏈商戰電影「聖人大盜」，五百人全台最大包場就在大盜影城！</p>
-                        <p>本土新銳導演徐嘉凱入圍金馬獎鉅作，集結賴雅妍、曹晏豪、曾之喬、曾志偉領銜主演，以台灣社會為背景，描述年輕創業家投身於區塊鏈技術，與既得利益者周旋的故事。</p>
+                    <div class="col-md-4 col-lg-6">
+                        <img src="/img/movie-logo.png" class="intro-img img-fluid mt-4 mb-4" />
+                        <p>全台最大五百人共同觀影！到大盜影城一起觀賞今年秋季強檔國片，全球首部區塊鏈商戰電影「聖人大盜」。</p>
+                        <p>聖人大盜為本土新銳導演徐嘉凱入圍金馬獎鉅作，集結賴雅妍、曹晏豪、曾之喬、曾志偉領銜主演，以台灣社會為背景，描述年輕創業家投身於區塊鏈技術，與既得利益者周旋的故事。</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="shape shape-left-right shape-blue" style="height: 550px;">
+        <section class="shape shape-left-right shape-blue shape-intro" style="height: 550px;">
             <div class="section-container">
                 <div class="row">
-                    <div class="col-md-4">
-                        <img src="/img/market-logo.png" class="intro-img img-fluid mb-4" />
-                        <p>食衣住行育樂，當區塊鏈進入生活，會呈現什麼樣的樣貌？實際體驗比特幣、各種密碼貨幣支付，好吃好玩的市集商家，各種區塊鏈問題解惑與使用教學，就在11/3生活市集。</p>
+                    <div class="col-md-4 order-sm-2 order-2 col-lg-6">
+                        <img src="/img/market-logo.png" class="intro-img img-fluid mt-4 mb-4" />
+                        <p>當區塊鏈進入生活，會呈現什麼樣的樣貌？</p>
+                        <p>到生活市集現場體驗區塊鏈支付方式、各類商販與小遊戲等，我們更與社群合作，在現場提供問題解惑與區塊鏈應用教學，以最新穎的模式享受美食與逛街體驗。</p>
                     </div>
-                    <div class="col-md-8">
-                        <div class="trapezoid-img trapezoid-img-right" style="background-image: url('/img/market-page.png')"></div>
+                    <div class="col-md-8 order-sm-1 order-1 col-lg-6">
+                        <div class="trapezoid-img trapezoid-img-right" style="background-image: url('/img/market-page.jpg')"></div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="shape shape-right-left shape-yellow" style="height: 550px;">
+        <section class="shape shape-right-left shape-yellow shape-intro" style="height: 550px;">
             <div class="section-container">
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-8 col-lg-6">
                         <div class="trapezoid-img trapezoid-img-left" style="background-image: url('/img/lecture-page.jpg'); background-position: initial;"></div>
                     </div>
-                    <div class="col-md-4">
-                        <img src="/img/lecture-logo.png" class="intro-img img-fluid mb-4" />
-                        <p>產業與愛好者的對話，創作者與觀眾的互動，開發者與使用者的交流⋯；鏈上講堂中著眼於展開「區塊鏈與生活層面」的討論，感受區塊鏈產業最新的脈動，發掘各種令人激動的使用可能性。</p>
+                    <div class="col-md-4 col-lg-6">
+                        <img src="/img/lecture-logo.png" class="intro-img img-fluid mt-4 mb-4" />
+                        <p>到鏈上講堂感受區塊鏈產業最新的脈動，發掘各種令人激動的使用可能性。</p>
+                        <p>我們將邀請知名的產業人士來到現場，跟大家分享區塊鏈是如何跟我們的生活產生連結，成為我們生活中不可或缺的一部分。</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="shape shape-left-right shape-blue" style="height: 550px;">
+        <section class="shape shape-left-right shape-blue shape-intro" style="height: 550px;">
             <div class="section-container">
                 <div class="row">
-                    <div class="col-md-4">
-                        <img src="/img/content-logo.png" class="intro-img img-fluid mb-4" />
+                    <div class="col-md-4 order-sm-2 order-2 col-lg-6">
+                        <img src="/img/content-logo.png" class="intro-img img-fluid mt-4 mb-4" />
                         <p>食衣住行育樂，當區塊鏈進入生活，會呈現什麼樣的樣貌？實際體驗比特幣、各種密碼貨幣支付，好吃好玩的市集商家，各種區塊鏈問題解惑與使用教學，就在11/3生活市集。</p>
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-8 order-sm-1 order-1 col-lg-6">
                         <div class="trapezoid-img trapezoid-img-right" style="background-image: url('/img/content-page.jpg')"></div>
                     </div>
                 </div>
@@ -124,11 +135,11 @@
             </div>
         </section>
 
-        <section class="shape shape-right-left shape-blue" style="height: 600px;">
+        <section class="shape shape-right-left shape-blue" style="height: 50vw;">
             <div class="section-container">
                 <div class="row">
                     <div class="col-12">
-                        <img src="" class="img-fluid" id="countdown_img">
+                        <img src="" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -189,5 +200,27 @@
         });
     </script>
 
+    <script>
+        $(document).ready(function(){
+            changeHeight();
+        });
+
+        $(window).on('resize', function(){
+            changeHeight();
+        });
+
+        function changeHeight(){
+            var height = $(window).height();
+            var width = $(window).width();
+            $('.shape-intro').each(function(){
+                if(width > 768){
+                    $(this).css('height', $(this).find('.trapezoid-img').height()+parseInt($(this).css('border-top-width'))*2+'px');
+                }
+                else{
+                    $(this).css('height', $(this).find('.trapezoid-img').height()+$(this).find('.col-lg-6').height()+parseInt($(this).css('border-top-width'))*2+'px');
+                }
+            });
+        }
+    </script>
 </body>
 </html>
