--- a/lifeonchain/lecture.html
+++ b/lifeonchain/lecture.html
@@ -9,7 +9,7 @@
     <link rel="canonical" href="http://loc2019.lifeonchain.today/lecture.html"/>
     <meta property="og:site_name" content="Life on Chain"/>
     <meta property="og:url" content="http://loc2019.lifeonchain.today/lecture.html"/>
-    <meta property="og:image" content="http://loc2019.lifeonchain.today/img/main-figure.png"/>
+    <meta property="og:image" content="http://loc2019.lifeonchain.today/img/main-figure.jpg"/>
     <meta property="og:title" content="2019 鏈上生活節 Life on Chain! - 鏈上講堂"/>
     <meta property="og:description" content="從今天起！鏈上生活節！"/>
 
