--- a/lifeonchain/ticket/index.html
+++ b/lifeonchain/ticket/index.html
@@ -150,7 +150,9 @@
 
     <script>
         $(document).ready(function(){
-            changeHeight();
+            setTimeout(function(){
+                changeHeight();
+            }, 500);
         });
 
         $(window).on('resize', function(){
