--- a/lifeonchain/activity/index.html
+++ b/lifeonchain/activity/index.html
@@ -142,7 +142,9 @@
 
     <script>
         $(document).ready(function(){
-            changeHeight();
+            setTimeout(function(){
+                changeHeight();
+            }, 500);
         });
 
         $(window).on('resize', function(){
