--- a/lifeonchain/index.html
+++ b/lifeonchain/index.html
@@ -202,7 +202,9 @@
 
     <script>
         $(document).ready(function(){
-            changeHeight();
+            setTimeout(function(){
+                changeHeight();
+            }, 500);
         });
 
         $(window).on('resize', function(){
